# deltalake-datafusion

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  pr.yaml
crates/acceptance/: Cargo.toml  README.md
crates/acceptance/src/: data.rs  lib.rs  meta.rs
crates/datafusion/: Cargo.toml
crates/datafusion/examples/: simple_read.rs
crates/datafusion/src/: config.rs  error.rs  lib.rs  log_table_provider.rs  planner.rs  schema_provider.rs  session.rs  table_format.rs  utils.rs
crates/datafusion/src/commands/: mod.rs
crates/datafusion/src/commands/vacuum/: logical.rs  mod.rs  physical.rs
crates/datafusion/src/engine/: apply_schema.rs  apply_schema_test.rs  evaluation.rs  file_format.rs  mod.rs  schema_adapter.rs  storage.rs
crates/datafusion/src/engine/expressions/: mod.rs  to_datafusion.rs  to_delta.rs
crates/datafusion/src/engine/schema_adapter/: mod.rs
crates/datafusion/src/execution/: directory_listing.rs  mod.rs  vacuum.rs
crates/datafusion/src/expressions/: mod.rs  to_datafusion.rs  to_delta.rs
crates/datafusion/src/functions/: mod.rs  sign_url.rs
crates/datafusion/src/sql/: mod.rs  parser.rs  statements.rs
crates/datafusion/src/sql/commands/: vacuum.rs
crates/datafusion/src/sql/statements/: catalogs.rs
crates/datafusion/src/sql/unity/: mod.rs
crates/datafusion/src/table_provider/: exec.rs  mod.rs  snapshot.rs  table_format.rs
crates/datafusion/src/table_provider/delta/: mod.rs  table_format.rs
crates/datafusion/src/unity/: exec.rs
notebooks/: .gitignore  iceberg.ipynb  iceberg.py
