[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-incubator/deltalake-datafusion"
readme = "README.md"
rust-version = "1.85"
version = "0.0.1"

[workspace.dependencies]
delta_kernel = { version = "0.14.0", features = [
  "default-engine",
  "arrow",
  "internal-api",
] }
# unitycatalog-client = { path = "../unitycatalog-rs/crates/client", features = [
#   "sharing",
# ] }
# unitycatalog-common = { path = "../unitycatalog-rs/crates/common", default-features = false }
unitycatalog-client = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "68f0a4b25178f61bdbd4b8e4a1819bdc8f48a24c", features = [
  "sharing",
] }
unitycatalog-common = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "68f0a4b25178f61bdbd4b8e4a1819bdc8f48a24c", default-features = false }
