[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-incubator/deltalake-datafusion"
readme = "README.md"
rust-version = "1.85"
version = "0.0.1"

[workspace.dependencies]
delta_kernel = { version = "0.15.1", features = [
  "default-engine-rustls",
  "arrow-55",
  "internal-api",
] }
# unitycatalog-client = { path = "../unitycatalog-rs/crates/client" }
# unitycatalog-common = { path = "../unitycatalog-rs/crates/common", default-features = false }
unitycatalog-client = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "02e948cd1ac3bcebc751fed52b29e90aa0152f36" }
unitycatalog-common = { git = "https://github.com/unitycatalog-incubator/unitycatalog-rs", rev = "02e948cd1ac3bcebc751fed52b29e90aa0152f36", default-features = false }
