[package]
name = "deltalake-datafusion"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
delta_kernel = { workspace = true }
unitycatalog-common = { workspace = true }

datafusion = { version = "49", features = ["avro"] }
datafusion-session = { version = "49" }

arrow = "55"
async-trait = "0.1"
bytes = "1.6.0"
chrono = "0.4.40"
dashmap = "6.0.1"
futures = "0.3"
itertools = "0.14"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
sqlparser = { version = "0.55.0", default-features = false, features = [
  "std",
  "visitor",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5.4"

[dev-dependencies]
acceptance = { path = "../acceptance" }
rstest = "0.25.0"
tempfile = "3.6.0"

[build-dependencies]
ureq = "3.0"
flate2 = "1.1"
tar = "0.4"
